[gd_scene load_steps=9 format=3 uid="uid://cb5o6pmbchm0d"]

[ext_resource type="Texture2D" uid="uid://beb4tgapuqus2" path="res://images/checker.png" id="1_aum10"]
[ext_resource type="PackedScene" uid="uid://dnbrvu6k3r2fk" path="res://Tools/ProgressClock/scenes/clock.tscn" id="2_lushf"]
[ext_resource type="PackedScene" uid="uid://crqd5idfg43dx" path="res://Tools/Note/scenes/note.tscn" id="3_w87pm"]
[ext_resource type="PackedScene" uid="uid://3pwo7kkfdave" path="res://Tools/DiceRoller/scenes/diceroller.tscn" id="4_lushf"]
[ext_resource type="PackedScene" uid="uid://d225pk8lxwbrh" path="res://Tools/TurnTracker/scenes/TurnTracker.tscn" id="5_w87pm"]
[ext_resource type="Theme" uid="uid://cniktbk5ckwmp" path="res://style/WarmLight.theme" id="6_a46j4"]
[ext_resource type="Script" uid="uid://k2xugrb0wt4o" path="res://scripts/searchandrun.gd" id="7_23dc1"]
[ext_resource type="FontFile" uid="uid://cv7k8nak1nu7g" path="res://style/font/Urbanist-Black.ttf" id="8_il54y"]

[node name="MainScreen" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_a46j4")
texture = ExtResource("1_aum10")
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="MenuBar" type="MenuBar" parent="HBoxContainer"]
layout_mode = 2

[node name="File" type="PopupMenu" parent="HBoxContainer/MenuBar"]
title = "File"
position = Vector2i(0, 32)
size = Vector2i(200, 120)
min_size = Vector2i(200, 120)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MenuBar/File"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Save" type="Button" parent="HBoxContainer/MenuBar/File/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Save As" type="Button" parent="HBoxContainer/MenuBar/File/VBoxContainer"]
layout_mode = 2
text = "Save As"

[node name="Load" type="Button" parent="HBoxContainer/MenuBar/File/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Tools" type="PopupMenu" parent="HBoxContainer/MenuBar"]
auto_translate_mode = 1
title = "Tools"
position = Vector2i(38, 32)
size = Vector2i(200, 120)
min_size = Vector2i(200, 120)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MenuBar/Tools"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Add Note" type="Button" parent="HBoxContainer/MenuBar/Tools/VBoxContainer"]
layout_mode = 2
text = "Add Note"

[node name="Add Clock" type="Button" parent="HBoxContainer/MenuBar/Tools/VBoxContainer"]
layout_mode = 2
text = "Add Clock"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Try !help"
alignment = 1
script = ExtResource("7_23dc1")

[node name="Diceroller" type="PanelContainer" parent="HBoxContainer/LineEdit"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = 8.0
offset_right = 32.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LineEdit/Diceroller"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CommandRecall" type="Label" parent="HBoxContainer/LineEdit/Diceroller/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="OperandsLabel" type="Label" parent="HBoxContainer/LineEdit/Diceroller/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultLabel" type="Label" parent="HBoxContainer/LineEdit/Diceroller/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_il54y")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = " _ "

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = " X "

[node name="Window" parent="." instance=ExtResource("2_lushf")]
visible = false

[node name="Window2" parent="." instance=ExtResource("3_w87pm")]
visible = false

[node name="Window3" parent="." instance=ExtResource("4_lushf")]
visible = false

[node name="Window4" parent="." instance=ExtResource("5_w87pm")]
visible = false

[connection signal="text_submitted" from="HBoxContainer/LineEdit" to="HBoxContainer/LineEdit" method="_on_line_edit_text_submitted"]
